--- a/plugins.cfg
+++ b/plugins.cfg
@@ -1,10 +1,17 @@
 # Defines plugins to load
 
 # Define plugin folder
-#PluginFolder=/usr/lib/i386-linux-gnu/OGRE-1.7.4
-
-PluginFolder=/usr/ogre-debug/lib/OGRE
+PluginFolder=/usr/private/lib/OGRE
 
 # Define plugins
-Plugin=RenderSystem_GL_d
-Plugin=Plugin_CgProgramManager_d
+# Plugin=RenderSystem_Direct3D9
+# Plugin=RenderSystem_Direct3D10
+# Plugin=RenderSystem_Direct3D11
+ Plugin=RenderSystem_GL
+# Plugin=RenderSystem_GLES
+ Plugin=Plugin_ParticleFX
+ Plugin=Plugin_BSPSceneManager
+ Plugin=Plugin_CgProgramManager
+ Plugin=Plugin_PCZSceneManager
+ Plugin=Plugin_OctreeZone
+ Plugin=Plugin_OctreeSceneManager
