--- a/plugins.cfg
+++ b/plugins.cfg
@@ -1,17 +1,9 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=/usr/private/lib/OGRE
+#PluginFolder=/usr/lib/i386-linux-gnu/OGRE-1.7.4
 
-# Define plugins
-# Plugin=RenderSystem_Direct3D9
-# Plugin=RenderSystem_Direct3D10
-# Plugin=RenderSystem_Direct3D11
- Plugin=RenderSystem_GL
-# Plugin=RenderSystem_GLES
- Plugin=Plugin_ParticleFX
- Plugin=Plugin_BSPSceneManager
- Plugin=Plugin_CgProgramManager
- Plugin=Plugin_PCZSceneManager
- Plugin=Plugin_OctreeZone
- Plugin=Plugin_OctreeSceneManager
+PluginFolder=/usr/lib/x86_64-linux-gnu/OGRE-1.9.0
+
+Plugin=RenderSystem_GL
+#Plugin=Plugin_CgProgramManager
